# Snayke

./: .gitignore  CMakeLists.txt  README.md  info.txt  main.cpp  run.ps1
.cache/clangd/index/: constants.h.16F9B9BBCD6C7BD5.idx  constants.h.92F89AAD5D814770.idx  helpers.cpp.B09178D55074BC37.idx  helpers.cpp.B1CEFC507BE7CB33.idx  main.cpp.1174B4EA88EF7FA9.idx  main.cpp.F0C7166DC6A795EF.idx  snake.cpp.0A4EF4FA69C9F092.idx
src/: helpers.cpp  main.cpp  snake.cpp
src/include/: Constants.hpp  Helpers.hpp  Snake.hpp
